--- a/codeAndroidStudio/app/src/main/res/layout/activity_clients.xml
+++ b/codeAndroidStudio/app/src/main/res/layout/activity_clients.xml
@@ -83,13 +83,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/rounded_text_view"
                         android:paddingLeft="15dp"
                         android:paddingTop="8dp"
                         android:paddingRight="15dp"
                         android:paddingBottom="8dp"
                         android:text="Nos clients"
-                        android:textColor="#C70016"
+                        android:textColor="#FFFFFF"
                         android:textSize="20sp"
                         android:textStyle="bold" />
                 </LinearLayout>
