--- a/codeAndroidStudio/app/src/main/res/layout/activity_modif_fiche_sous_projet.xml
+++ b/codeAndroidStudio/app/src/main/res/layout/activity_modif_fiche_sous_projet.xml
@@ -85,19 +85,24 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="bottom|right"
+                    android:gravity="right|center_vertical"
                     android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView19"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/chevrons_sup" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/rounded_text_view"
                         android:paddingLeft="15dp"
                         android:paddingTop="8dp"
                         android:paddingRight="15dp"
                         android:paddingBottom="8dp"
                         android:text="Je modifie les données"
-                        android:textColor="#C70016"
+                        android:textColor="#FFFFFF"
                         android:textSize="20sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -123,6 +128,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/cible" />
+
+                <EditText
+                    android:id="@+id/etLieu"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:backgroundTint="#FFFFFF"
+                    android:inputType="textPersonName"
+                    android:textColor="#FFFFFF"
+                    android:textSize="20sp"
+                    tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
@@ -158,6 +191,15 @@
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/dimensions" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="(L)"
+                    android:textColor="#FFFFFF"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
                 <EditText
                     android:id="@+id/etLongueur"
                     android:layout_width="wrap_content"
@@ -185,6 +227,15 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/dimensions" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:text="(l)"
+                    android:textColor="#FFFFFF"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/etLargeur"
@@ -214,13 +265,15 @@
                     android:layout_height="wrap_content"
                     app:srcCompat="@drawable/details" />
 
+
                 <EditText
                     android:id="@+id/etDetail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:backgroundTint="#FFFFFF"
-                    android:inputType="textPersonName"
+                    android:gravity="start|top"
+                    android:inputType="textMultiLine"
                     android:textColor="#FFFFFF"
                     android:textSize="20sp"
                     tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
