--- a/codeAndroidStudio/app/src/main/res/layout/activity_new_categorie.xml
+++ b/codeAndroidStudio/app/src/main/res/layout/activity_new_categorie.xml
@@ -85,19 +85,24 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="bottom|right"
+                    android:gravity="right|center_vertical"
                     android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView19"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/chevrons_sup" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/rounded_text_view"
                         android:paddingLeft="15dp"
                         android:paddingTop="8dp"
                         android:paddingRight="15dp"
                         android:paddingBottom="8dp"
                         android:text="J'ajoute une catégorie"
-                        android:textColor="#C70016"
+                        android:textColor="#FFFFFF"
                         android:textSize="20sp"
                         android:textStyle="bold" />
                 </LinearLayout>
