--- a/codeAndroidStudio/app/src/main/res/layout/activity_new_projet_by_projet.xml
+++ b/codeAndroidStudio/app/src/main/res/layout/activity_new_projet_by_projet.xml
@@ -85,19 +85,24 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="bottom|right"
+                    android:gravity="right|center_vertical"
                     android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/imageView19"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/chevrons_sup" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/rounded_text_view"
                         android:paddingLeft="15dp"
                         android:paddingTop="8dp"
                         android:paddingRight="15dp"
                         android:paddingBottom="8dp"
                         android:text="Nouveau projet"
-                        android:textColor="#C70016"
+                        android:textColor="#FFFFFF"
                         android:textSize="20sp"
                         android:textStyle="bold" />
                 </LinearLayout>
@@ -182,6 +187,38 @@
                     android:textColor="#FFFFFF"
                     android:textColorHint="#FFFFFF"
                     tools:ignore="TouchTargetSizeCheck" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/cible" />
+
+                <EditText
+                    android:id="@+id/etLieu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:backgroundTint="#FFFFFF"
+                    android:hint="Lieu"
+                    android:inputType="textPersonName"
+                    android:paddingLeft="5dp"
+                    android:paddingTop="5dp"
+                    android:paddingRight="10dp"
+                    android:textColor="#FFFFFF"
+                    android:textColorHint="#FFFFFF"
+                    tools:ignore="TouchTargetSizeCheck" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -306,7 +343,7 @@
                 <EditText
                     android:id="@+id/etDetail"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="100dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:background="@drawable/rounded_edit_text"
@@ -459,7 +496,8 @@
                 android:id="@+id/editTextInvisble"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:visibility="gone">
 
                 <EditText
                     android:id="@+id/etPhoto1"
