--- a/codeAndroidStudio/app/src/main/res/layout/row_sous_projet.xml
+++ b/codeAndroidStudio/app/src/main/res/layout/row_sous_projet.xml
@@ -35,7 +35,7 @@
                     android:id="@+id/imageView24"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:srcCompat="@drawable/categorie" />
+                    app:srcCompat="@drawable/cible" />
 
                 <TextView
                     android:id="@+id/tvSousProjet"
