amélioration code côté client et côté serveur + ajout conception, spécifications fonctionnelles, cdc...

--- a/codeAndroidStudio/app/src/main/res/layout/activity_fiche_sous_projet.xml
+++ b/codeAndroidStudio/app/src/main/res/layout/activity_fiche_sous_projet.xml
@@ -224,13 +224,15 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/layoutDetail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="20dp"
                 android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <ImageView
                     android:id="@+id/imageView9"
