--- a/codeAndroidStudio/app/src/main/res/layout/activity_new_categorie.xml
+++ b/codeAndroidStudio/app/src/main/res/layout/activity_new_categorie.xml
@@ -101,7 +101,7 @@
                         android:paddingTop="8dp"
                         android:paddingRight="15dp"
                         android:paddingBottom="8dp"
-                        android:text="J'ajoute une catégorie"
+                        android:text="Nouvelle catégorie"
                         android:textColor="#FFFFFF"
                         android:textSize="20sp"
                         android:textStyle="bold" />
